--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -17,26 +17,26 @@ services:
      - "mysql"
     environment:
      - "SPRING_PROFILES_ACTIVE=dev"
-  visualizer:
-    build:
-      context: ./applications/visualizer
-    image: eduardomioto/visualizer
-    container_name: visualizer
-    restart: on-failure
-    ports:
-      - 7000:80
-    links:
-      - "consul"
-      - "mysql"
-      - "finder"
-      - "specialist_opinion"      
-    depends_on:
-      - "finder"
-      - "specialist_opinion"
-    environment:
-      - "NGINX_PORT=80"
-    volumes:  
-      - ./volumes/visualizer/:/usr/share/nginx/html
+  #visualizer:
+  #  build:
+  #    context: ./applications/visualizer
+  #  image: eduardomioto/visualizer
+  #  container_name: visualizer
+  #  restart: on-failure
+  #  ports:
+  #    - 7000:80
+  #  links:
+  #    - "consul"
+  #    - "mysql"
+  #    - "finder"
+  #    - "specialist_opinion"      
+  #  depends_on:
+  #    - "finder"
+  #    - "specialist_opinion"
+  #  environment:
+  #    - "NGINX_PORT=80"
+  #  volumes:  
+  #    - ./volumes/visualizer/:/usr/share/nginx/html
   specialist_opinion:
     build:
      context: ./applications/specialist-opinion
@@ -52,20 +52,20 @@ services:
       - "consul"
     environment:
       - "SPRING_PROFILES_ACTIVE=dev"
-  architecture_probe:
-    build: 
-      context: ./applications/architecture-probe
-    image: eduardomioto/architecture-probe
-    container_name: architecture_probe
-    restart: on-failure
-    ports:
-      - 19099:19099
-    links:
-      - "consul"
-      - "sonarqube"
-      - "mysql"
-    environment:
-      - docker-stats=host.docker.internal
+  #architecture_probe:
+  #  build: 
+  #    context: ./applications/architecture-probe
+  #  image: eduardomioto/architecture-probe
+  #  container_name: architecture_probe
+  #  restart: on-failure
+  #  ports:
+  #    - 19099:19099
+  #  links:
+  #    - "consul"
+  #    - "sonarqube"
+  #    - "mysql"
+  #  environment:
+  #    - DOCKER_HOST=host.docker.internal
   #
   #
   #
