--- a/containers/configuration.env
+++ b/containers/configuration.env
@@ -4,7 +4,7 @@
 
 INFLUX_USER=admin
 INFLUX_PASSWORD=admin
-INFLUX_DB=bifrost
+INFLUX_DB=m2csea
 INFLUXDB_ADMIN_USER=admin
 INFLUXDB_ADMIN_PASSWORD=admin
 INFLUXDB_USER=admin
